feat: i love my timeline
